--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-HF_API_TOKEN= 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
+HF_API_TOKEN=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
 HF_MODEL=google/flan-t5-small
+
